fix sidebar z-index bug

--- a/ui/assets/dash.css
+++ b/ui/assets/dash.css
@@ -136,6 +136,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  z-index: 5;
   /* align-items: center; */
   position: relative;
 }
